// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderLogo Rendering Render HeaderLogo component with default props 1`] = `
<React.Fragment>
  <a
    className="HeaderLogo__logo"
    href="/"
  >
    <img
      alt="Gateway logo"
      src="/parent/testpath"
    />
  </a>
  <span
    className="HeaderLogo__logo__name"
  >
    Gateway 
  </span>
</React.Fragment>
`;

exports[`HeaderLogo Rendering Render HeaderLogo component with props 1`] = `
<React.Fragment>
  <a
    className="HeaderLogo__logo varClassName"
    href="/"
  >
    <img
      alt="Gateway logo"
      src="/parent/testpath"
    />
  </a>
  <span
    className="HeaderLogo__logo__name"
  >
    Gateway 
  </span>
</React.Fragment>
`;
